# sdscli

./: .project  MIGRATION_SUMMARY.md  pyproject.toml  setup.py
sdscli/: __init__.py  command_line.py  conf_utils.py  func_utils.py  log_utils.py  os_utils.py  prompt_utils.py  query_utils.py
sdscli/adapters/: __init__.py
sdscli/adapters/hysds/: ci.py  cloud.py  configure.py  fabfile.py  orch.py  pkg.py  reset.py  rules.py  start.py  start_tps.py  status.py  stop.py  stop_tps.py  update.py
sdscli/adapters/hysds/files/: Jenkinsfile.example  README.md  cluster.py  config-branch.xml  config-pipeline.xml  config.xml  kibana.yml  netrc.mozart  opensearch_dashboards.yml  watch_supervisord_services.py  watch_systemd_services.py
sdscli/adapters/hysds/files/kibana_dashboard_import/: import_dashboard.sh.tmpl
sdscli/adapters/hysds/files/opensearch_dashboards_import/: import_dashboard.sh.tmpl
sdscli/adapters/hysds/files/orch/grq/: celeryconfig.py
sdscli/adapters/hysds/files/orch/metrics/: celeryconfig.py
sdscli/adapters/hysds/files/orch/mozart/: celeryconfig.py  settings.cfg
sdscli/adapters/hysds/files/orch/verdi/: celeryconfig.py
sdscli/adapters/sdskit/: configure.py
sdscli/cloud/aws/: asg.py  storage.py  utils.py
sdscli/cloud/azure/: utils.py
sdscli/cloud/gcp/: utils.py
test/: test_packaging.py
