[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hysds-sdscli"
dynamic = ["version"]
description = "Command line interface for SDSKit"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "HySDS", email = "hysds-help@jpl.nasa.gov"}
]
keywords = ["hysds", "sds", "cli", "command-line"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # HySDS sibling packages (per HC-612 section 4.1)
    "hysds-core>=7.0,<8.0",
    
    # Core dependencies - matching original setup.py order and pins exactly
    "PyYAML>=5.1",
    "Pygments>=2.4.0",
    "prompt-toolkit>=3.0,<4.0",  # Upgraded from >=1.0,<2.0 per migration spec
    "tqdm>=4.32.1",
    "backoff>=1.8.0",
    "requests>=2.22.0",
    "kombu>=4.5.0",
    "redis>=3.2.1",
    "elasticsearch>=7.0.0,<7.14.0",
    "elasticsearch-dsl>=7.0.0,<7.4.0",
    "awscli>=1.17.1",
    "boto3>=1.11.1",
    "fab-classic>=1.19.2",
    "Jinja2>=3.0.0,<4.0.0",
]

[project.scripts]
sds = "sdscli.command_line:main"

[project.urls]
Homepage = "https://github.com/hysds/sdscli"
Repository = "https://github.com/hysds/sdscli"
Issues = "https://github.com/hysds/sdscli/issues"

[tool.hatch.version]
source = "vcs"
raw-options = {version_scheme = "no-guess-dev"}

[tool.hatch.build.targets.wheel]
packages = ["sdscli"]

[tool.hatch.build.targets.sdist]
include = [
    "/sdscli",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.shared-data]
"sdscli/adapters/hysds/files" = "share/sdscli/adapters/hysds/files"
"sdscli/adapters/sdskit/files" = "share/sdscli/adapters/sdskit/files"
